# lionheart

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  README.md  conftest.py  environment.yml  pyproject.toml  pyproject_old.toml
lionheart/: __init__.py  cli.py
lionheart/commands/: collect_samples.py  cross_validate.py  customize_thresholds.py  evaluate_univariates.py  extract_features.py  extract_roc.py  guides.py  predict.py  train_model.py  validate.py
lionheart/features/: create_dataset_inference.py  running_pearson_r.py
lionheart/modeling/: feature_contribution.py  prepare_inputs.py  prepare_modeling.py  prepare_modeling_command.py  read_meta_data.py  roc_curves.py  run_cross_validate.py  run_customize_thresholds.py  run_extract_roc.py  run_full_modeling.py  run_predict_single_model.py  run_univariate_analyses.py  transformers.py
lionheart/plotting/: plot_inner_scores.py
lionheart/utils/: bam_utils.py  (+5 more)
remap/: README.md  workflow.py
resource_creation/: README.md  bin_chromatin_tracks.py  bin_genome.py  calculate_tail_cdf.py  collect_feature_categories.py  collect_outliers.py  collect_outliers_across_datasets.py  detect_outlier_candidates.sh  detect_outliers_candidates.sh  scrape_encode_donor_info.py  sparsify_overlaps.awk
tests/: test_common_workflows.py  test_cross_validate.py  test_customize_thresholds.py  test_evaluate_univariates.py  test_extract_roc.py  test_normalize_megabins.py  test_poisson.py  test_predict.py  test_predict_sample.py  test_predict_single_model.py  test_train_model.py  test_validate.py
workflow/: target_creators.py  workflow.py
(+4 files in other folders)
