[tool.poetry]
name = "lionheart"
version = "0.1.0"
description = "Coming soon!"
authors = ["Ludvig <mail@ludvigolsen.dk>"]
readme = "README.md"
packages = [{include = "lionheart"}]

[tool.poetry.dependencies]
python = "^3.9"
utipy = "^1.0.2"
scikit-learn = "1.0.2"
pandas = "1.5.3"
numpy = "1.26.4"
joblib = "1.2.0"
statsmodels = "0.14.1"
rich = "^13.7.1"
scipy = "^1.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lionheart = "lionheart.cli:main"
